<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E1F"
    android:orientation="vertical"
    android:id="@+id/mainactivity"
    tools:context=".browserMirroring">






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/backimg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/ic_back_24"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browser_mirroring"
        android:textSize="20sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

</LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#D32F2F">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:text="@string/dont_leave_page"/>


    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:src="@drawable/screen"
            android:contentDescription="Mirror Illustration"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_a"
            android:textColor="#00FFAA"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:paddingHorizontal="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/top_dot"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/dot_orange" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_same_wifi"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="8dp"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>


        <!-- Wi-Fi Status -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:padding="10dp"
            android:layout_marginLeft="18dp"
            android:gravity="center_vertical"
            android:backgroundTint="#222222"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/broWifi"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_wifi"
                android:layout_marginLeft="6dp"
                android:backgroundTint="#00FF88"/>

            <TextView
                android:id="@+id/broWifiStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wi-Fi: Wi-Fi Connected"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:layout_marginLeft="6dp"
                android:paddingStart="8dp"/>
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/bottom_dot"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/dot_orange" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_this_website"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:layout_marginLeft="18dp"
                android:layout_marginBottom="8dp"/>



        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#222222"
            android:padding="10dp"
            android:layout_marginLeft="18dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tvIpAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="http://0.0.0.0:8080"
                android:textColor="#FFAA33"
                android:textSize="14sp"
                android:singleLine="true"/>

            <ImageView
                android:id="@+id/ivCopy"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_copy"
                android:contentDescription="Copy URL"/>

            <!-- Stop cast button (hidden initially) -->
            <ImageView
                android:id="@+id/ivStopCast"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_stop"
                android:contentDescription="Stop casting"
                android:visibility="gone"/>
        </LinearLayout>


        <!--   &lt;!&ndash; URL Box &ndash;&gt;
           <LinearLayout
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="#222222"
               android:padding="10dp"
               android:gravity="center_vertical"
               android:layout_marginBottom="10dp">

               <TextView
                   android:id="@+id/tvIpAddress"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:text="http://0.0.0.0:5621"
                   android:textColor="#FFAA33"
                   android:textSize="14sp"
                   android:singleLine="true"/>

               <ImageView
                   android:id="@+id/ivCopy"
                   android:layout_width="24dp"
                   android:layout_height="24dp"
                   android:src="@drawable/ic_copy"
                   />
           </LinearLayout>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ip_address_warning"
            android:textColor="#AAAAAA"
            android:textSize="11sp"
            android:maxLines="4"
            android:lineBreakStyle="strict"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="4dp"
            android:lineSpacingExtra="2dp"/>
        <RelativeLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_alignParentStart="true"
                android:id="@+id/startScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start Screen Cast "
                android:background="@drawable/rounded_button"/>

            <Button
                android:layout_alignParentEnd="true"
                android:id="@+id/stopScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Stop Screen Cast "
                android:background="@drawable/rounded_button"/>


        </RelativeLayout>


    </LinearLayout>

    </LinearLayout>

    </ScrollView>
